sql/test/unit/checks/simple_fail.exp
--no rows
select check(1 > 2);
^
|
 ----- ERROR
Error: line 2, character 0:
Failed constraint: 1 > 2
